# low-level-design

./: README.md  questions.md  resume_tips.txt  sample_boost.cpp
json_parser/go/: main.go
load_balancer/: config.yaml  go.mod  go.sum  load_balancer.go  main.go  problem-statement.md
load_balancer/backend/: backend.go
load_balancer/backend/server_pool/: least_connections.go  server_pool.go
load_balancer/frontend/: frontend.go
load_balancer/utils/: config.go  logger.go
machine_coding/: machine_coding.md
machine_coding/bidirec-grpc/: README.md
machine_coding/bidirec-grpc/client/bi-directional/: bidirClient.go
machine_coding/bidirec-grpc/proto/: service.pb.go  service.proto  service_grpc.pb.go
machine_coding/bidirec-grpc/server/: server.go  serverMethodImplementation.go
machine_coding/load_balancer/: problem-statement.md
machine_coding/load_balancer/backend/: backend.go
machine_coding/load_balancer/backend/server_pool/: round_robin.go
machine_coding/web_sockets/: README.md  go.mod  main.go
messaging_queue/: CMakeCache.txt  CMakeLists.txt  Makefile  PROBLEM.md  cmake_install.cmake  lc-417.cpp  problem_statement.md
messaging_queue/cpp/: ISubscriber.h  Message.cpp  Message.h  Queue.cpp  Queue.h  Subscriber.cpp  Subscriber.h  ThreadPool.h  Topic.cpp  Topic.h  TopicSubscriber.h
rate_limiter/: README.md  go.mod  problem.md  profile.cov
rate_limiter/fixed-window/: fixed_window.go  fixed_window_test.go
rate_limiter/sliding-window/: sliding_window.go  sliding_window_test.go
rate_limiter/token-bucket/: token_bucket.go  token_bucket_test.go
(+2 files in other folders)
